Added more features. Added showing photo. Added also routing

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta >
+  <meta charset="utf-8" name="PhotoBrowser" content="PhotoBrowser web application">
   <title>PhotoBrowser</title>
   <base href="/">
 
